@@ -1,6 +1,7 @@
 2017-12-03 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>
 
 				* fix start_index length problem
+				* when i != 1, set extra_fread_prams header to FALSE
 
 2017-12-03 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>
 
